--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     font-size: 18px;
   }
   
-  a {
+  a1,a2,a3,a4{
     text-decoration: none;
     font-size: 30px;
     color: rgb(16, 6, 11);
