--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .card {
     background-color: rgb(225, 185, 246);
-    box-shadow: 0px 5px 10px 0 rgb(109, 38, 184);
+    box-shadow: 0px 0px 40px rgb(109, 38, 184);
     max-width: 475px;
     margin: auto;
     text-align: center;
@@ -40,6 +40,7 @@
     cursor: pointer;
     width: 100%;
     font-size: 18px;
+    
   }
   
   a1,a2,a3,a4{
@@ -49,5 +50,5 @@
   }
   
   button:hover, a:hover {
-    opacity: 0.2;
+    opacity: 0.7;
   }
